# cargo-berger

./: Cargo.toml  README.md  berger.example.toml  berger.toml  book.toml
.github/workflows/: codeql.yml  rust.yaml
docs/src/: SUMMARY.md  begin.md  committing_guide.md  config_file.md  config_inheritance.md  getting_changes.md  jumping_branches.md  main_page.md  pushing_changes.md  releases.md
docs/src/reference/: repository.md  root.md  rust.md
docs/src/rust/: getting_started.md
src/: main.rs
src/cli/: checkpoint.rs  ci.rs  fix_issue.rs  full.rs  init.rs  mod.rs  new_feat.rs  pr.rs  pull.rs  push.rs  quick_switch.rs  rebase_default.rs  release.rs  save.rs  update_branch.rs
src/cli/debug/: list.rs  mod.rs
src/cli/issue/: checkout.rs  commit.rs  mod.rs
src/cli/rust/: ci.rs  mod.rs
src/cli/rust/workspace/: init.rs  (+3 more)
src/models/: cli_data.rs  mod.rs
src/models/berger_data/: git.rs  mod.rs  rust_workspace.rs
src/models/commands/: commander.rs  mod.rs
src/models/config/: load.rs  mod.rs  repository_config.rs  rust_config.rs
src/models/crate_data/: cargo_bindings.rs  git.rs  mod.rs
src/models/ext/: command.rs  exit_status.rs  mod.rs  regex.rs
src/models/git_repo/: basic_git.rs  commit.rs  mod.rs  rebase.rs
src/models/repository_data/: ci.rs  git.rs  issues.rs  mod.rs  release.rs
src/models/shell_commands/: mod.rs  shell.rs
src/models/tool_bindings/: mod.rs
src/models/utils/: mod.rs
src/utils/: cmd.rs  logging.rs  mod.rs
src/utils/regex/: mod.rs  repository_url.rs
src/utils/traits/: merge_data.rs  mod.rs
src/utils/user_parsing/: mod.rs
(+53 files in other folders)
