[package]
name = "cargo-berger"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
# Clap
clap = { version = "4.5.41", features = [
    "unicode",
    "wrap_help",
    "derive",
    "color",
] }
clap-markdown = "0.1.5"

# Errors
color-eyre = "0.6.5"
# snafu = {version = "0.8.9", features = ["rust_1_81"]}

# Others
toml = "0.9.7"
git2 = "0.20.2"
serde = "1.0.226"
itertools = "0.14.0"
toml_edit = "0.23.6"
extend = "1.2.0"
convert_case = "0.8.0"
snafu = "0.8.9"
